--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,17 +1,12 @@
 {
     
-    "GLOBAL": {
-        "atencion": "Atención",
-        "aceptar": "Aceptar",
-        "cancelar": "Cancelar"
-    },
-    
     "HOME": {
         "TITLE": "SGA",
         "SELECT": "Seleccionar tipo de evaluación",
         "LOGIN": "Iniciar sesión",
         "LOGOUT": "Cerrar sesión",
-        "THEME": "Tema"
+        "THEME": "Tema",
+        "seleccione": "Seleccionar"
     },
 
     "GLOBAL":{
@@ -25,7 +20,10 @@
         "periodo": "Periodo",
         "continuar": "Continuar",
         "atras": "Atrás",
-        "generar": "Generar"
+        "generar": "Generar",
+        "atencion": "Atención",
+        "aceptar": "Aceptar",
+        "cancelar": "Cancelar"
     },
 
     "asignacion_fechas": {
@@ -55,7 +53,7 @@
         "sub_titulo_roles": "Sección para la asignación de Roles",
         "alerta": "A continuación, deberá seleccionar los roles que intervienen y el proceso, que puede ser Heteroevaluación, Autoevaluación de estudiantes, Coevaluación I, Autoevaluación docente, o Coevaluación II.",
         "seleccionar_roles": "Seleccionar roles que intervienen",
-        "seleccione": "Seleccionar ROL",
+        "seleccione": "Seleccionar",
         "administradores": "Administradores",
         "docentes": "Docentes",
         "estudiantes": "Estudiantes",
@@ -93,11 +91,13 @@
         "proyecto_curricular": "Proyecto Curricular",
         "proyecto1": "Nombre del proyecto curricular 1",
         "proyecto2": "Nombre del proyecto curricular 2",
-        "descripcion_proceso": "Descripción del proceso y orientación al usuario",
+        "descripcion_proceso": "Descripción del proceso",
         "descripcion": "Descripción",
-        "formulario": "Formulario correspondiente",
-        "formulario_placeholder": "Formulario correspondiente",
-        "guardar": "Guardar"
+        "error_fecha_inicio": "Por favor, ingrese la fecha de inicio.",
+        "error_fecha_fin": "Por favor, ingrese la fecha de fin.",
+        "error_proyecto": "Por favor, seleccione un proyecto.",
+        "error_docente": "Por favor, seleccione un docente.",
+        "error_descripcion": "Por favor, ingrese una descripción."
     },
 
     "autoevaluacion_i": {
@@ -105,30 +105,25 @@
         "fechas": "Fechas",
         "inicio": "Inicio",
         "fin": "Fin",
-        "estudiante": "Estudiante",
         "nombre_estudiante": "Nombre del Estudiante",
         "identificacion_estudiante": "Identificación estudiante",
         "identificacion": "Identificación",
         "proyecto_curricular": "Proyecto Curricular",
         "proyecto1": "Nombre del proyecto curricular 1",
         "proyecto2": "Nombre del proyecto curricular 2",
-        "descripcion_proceso": "Descripción del proceso y orientación al usuario",
+        "descripcion_proceso": "Descripción del proceso",
         "descripcion": "Descripción",
-        "formulario": "Formulario correspondiente",
-        "formulario_placeholder": "Formulario correspondiente",
-        "guardar": "Guardar"
+        "error_fecha_inicio": "Por favor, ingrese la fecha de inicio.",
+        "error_fecha_fin": "Por favor, ingrese la fecha de fin.",
+        "error_proyecto": "Por favor, seleccione un proyecto.",
+        "error_descripcion": "Por favor, ingrese una descripción."
     },
 
     "coevaluacion_i": {
         "titulo": "Evaluación de Coevaluación I",
-        "formato": "Código SIGUD por asignar",
-        "actor": "Cuerpo docente y estudiantado",
-        "cronograma": "Semanas 10 a 11 del calendario académico",
-        "documento": "Acta de co-evaluación del espacio curricular",
-        "instruccion": "Estimado cuerpo docente y estudiantado: Por favor co-evalúen con compromisos mutuos su desempeño docente y el de sus estudiantes en este espacio curricular utilizando el formato dispuesto para ello. Por favor cargue el acta resultado de este ejercicio de coevaluación.",
         "fechas": "Fechas",
-        "error_fecha_inicio": "Por favor, ingrese la fecha de inicio.",
-        "error_fecha_fin": "Por favor, ingrese la fecha de finalización.",
+        "inicio": "Inicio",
+        "fin": "Fin",
         "proyecto_curricular": "Proyecto Curricular",
         "error_proyecto": "Por favor, seleccione un proyecto curricular.",
         "espacio_academico": "Espacio Académico",
@@ -138,32 +133,26 @@
         "grupo": "Grupo",
         "error_grupo": "Por favor, seleccione un grupo.",
         "descripcion_proceso": "Descripción del proceso",
-        "error_descripcion": "Por favor, ingrese la descripción del proceso.",
-        "guardar": "Guardar"
-      },
+        "error_descripcion": "Por favor, ingrese la descripción del proceso."
+    },
 
     "autoevaluacion_ii": {
         "titulo": "Autoevaluación II",
         "fechas": "Fechas",
         "inicio": "Inicio",
         "fin": "Fin",
-        "nombre_docente": "Nombre del docente",
-        "nombre": "Nombre del Docente",
-        "identificacion_docente": "Identificación del docente",
+        "nombre_docente": "Nombre del Docente",
+        "identificacion_docente": "Identificación del Docente",
         "identificacion": "Identificación",
         "proyecto_curricular": "Proyecto Curricular",
-        "proyecto1": "Nombre del proyecto curricular 1",
-        "proyecto2": "Nombre del proyecto curricular 2",
-        "proyectoN": "Nombre del proyecto curricular n",
-        "espacios_academicos": "Espacios Académicos",
-        "espacio1": "Lista de espacios académicos asociados al docente y al proyecto curricular",
-        "espacio2": "Lista de espacios académicos asociados al docente y al proyecto curricular",
-        "espacioN": "Lista de n espacios académicos asociados al docente y al proyecto curricular",
-        "descripcion_proceso": "Descripción del proceso y orientación al usuario",
+        "espacio_academico": "Espacio Académico",
+        "descripcion_proceso": "Descripción del proceso",
         "descripcion": "Descripción",
-        "formulario": "Formulario correspondiente",
-        "formulario_placeholder": "Formulario correspondiente",
-        "guardar": "Guardar"
+        "error_fecha_inicio": "Por favor, ingrese la fecha de inicio.",
+        "error_fecha_fin": "Por favor, ingrese la fecha de fin.",
+        "error_proyecto": "Por favor, seleccione un proyecto.",
+        "error_espacio_academico": "Por favor, seleccione un espacio académico.",
+        "error_descripcion": "Por favor, ingrese una descripción."
     },
     
     "coevaluacion_ii": {
@@ -172,16 +161,15 @@
         "inicio": "Inicio",
         "fin": "Fin",
         "proyecto_curricular": "Proyecto Curricular",
-        "proyecto": "Proyecto",
-        "docente": "Docente",
-        "nombre_docente": "Nombre del Docente",
+        "proyecto": "Indique su proyecto curricular",
+        "error_proyecto": "Por favor, seleccione un proyecto curricular.",
         "espacio_academico": "Espacio Académico",
-        "espacio": "Espacio académico",
-        "descripcion_proceso": "Descripción del proceso y orientación al usuario",
-        "descripcion": "Descripción",
-        "formulario": "Formulario correspondiente",
-        "formulario_placeholder": "Formulario correspondiente",
-        "guardar": "Guardar"
+        "espacio": "Indique su espacio curricular",
+        "error_espacio_academico": "Por favor, seleccione un espacio académico.",
+        "docente": "Docente",
+        "error_docente": "Por favor, ingrese el nombre del docente.",
+        "descripcion_proceso": "Descripción del proceso",
+        "error_descripcion": "Por favor, ingrese la descripción del proceso."
     },
 
     "metricas":{
