--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -79,12 +79,13 @@
         "sub_titulo_cualitativa": "Permite clasificar el desempeño del docente usando categorías como 'Insuficiente', 'Necesita Mejorar', 'Bueno', etc.",
         "sub_titulo_cuantitativo": "Permite calificar el desempeño del docente con valores numéricos, como del 1 al 5.",
         "alerta_cualitativa": "A continuación, deberá diligenciar el formulario utilizando la escala cualitativa, seleccionando una categoría que mejor describa el desempeño del docente, como 'Excelente', 'Bueno', 'Aceptable', etc.",
-        "alerta_cuantitativa": "A continuación, deberá diligenciar el formulario utilizando la escala cuantitativa, asignando una calificación numérica al desempeño del docente, basada en su experiencia, con valores que pueden ir del 1 al 5.",
+        "alerta_cuantitativa": "A continuación, deberá diligenciar el formulario utilizando la escala cuantitativa, asignando una calificación numérica al desempeño del docente, basada en su experiencia.",
         "titulo_cualitativa_seud": "Escala cualitativa del SEUD",
         "titulo_cuantitativa_seud": "Escala cuantitativa del SEUD",
         "acciones": "Acciones",
-        "tipo": "Tipo de escala",
-        "valor": "Valor"
+        "tipo": "Evaluación",
+        "valor": "Valor",
+        "criterios": "Criterios"
     },
     
     "heteroevaluacion": {
