--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,11 +1,5 @@
 {
     
-    "GLOBAL": {
-        "atencion": "Attention",
-        "aceptar": "Accept",
-        "cancelar": "Cancel"
-    },
-    
     "HOME": {
         "TITLE": "SGA",
         "SELECT": "Select evaluation type",
@@ -20,12 +14,19 @@
         "ELIMINAR": "Delete",
         "EDITAR": "Edit",
         "AGREGAR": "Add",
+        "BUSCAR": "Search",
+        "LISTA": "List",
+        "FORMULARIO": "Form",
+        "ACCIONES": "Actions",
         "proyecto_academico": "Academic Project",
         "seleccionar": "Select",
         "periodo": "Period",
         "continuar": "Continue",
         "atras": "Back",
-        "generar": "Generate"
+        "generar": "Generate",
+        "atencion": "Attention",
+        "aceptar": "Accept",
+        "cancelar": "Cancel"
     },
     
     "asignacion_fechas": {
@@ -57,18 +58,17 @@
     },
 
     "definir_escalas": {
-        "titulo": "Define Scale",
-        "seleccionar_tipo_escala": "Select type of scale",
-        "seleccione": "Select",
-        "cualitativa": "Qualitative",
-        "cuantitativa": "Quantitative",
-        "escala": "Scale",
-        "del_seud": "of SEUD",
-        "descripcion": "Define description or objectives",
-        "agregar_elemento_escala": "Add scale element",
-        "estado": "Status",
-        "descripcion_columna": "Description",
-        "visualizar": "View"
+        "titulo_principal": "Define Scales",
+        "aniadir_nueva_escala": "Add new scale",
+        "tipo_escala": "Scale Type",
+        "descripcion": "Description",
+        "tipo_input": "Input Type",
+        "formulario_creacion": "Creation Form",
+        "sin_escalas": "No scales available",
+        "guardar": "Save",
+        "cancelar": "Cancel",
+        "eliminar": "Delete",
+        "buscar": "Search"
     },
     
     "heteroevaluacion": {
