--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -13,6 +13,10 @@
         "ELIMINAR": "Eliminar",
         "EDITAR": "Editar",
         "AGREGAR": "Agregar",
+        "BUSCAR": "Buscar",
+        "LISTA": "Lista",
+        "FORMULARIO": "Formulario",
+        "ACCIONES": "Acciones",
         "proyecto_academico": "Proyecto Académico",
         "seleccionar": "Seleccionar",
         "periodo": "Periodo",
@@ -65,29 +69,17 @@
     },
 
     "definir_escalas": {
-        "titulo_cualitativa": "Definición de escala cualitativa",
-        "titulo_cuantitativo": "Definición de escala cuantitativa",
-        "seleccionar_tipo_escala": "Seleccionar tipo de escala",
-        "seleccione": "Seleccione",
-        "cualitativa": "Cualitativa",
-        "cuantitativa": "Cuantitativa",
-        "escala": "Escala",
-        "del_seud": "del SEUD",
-        "descripcion": "Define descripción u objetivos del mismo",
-        "agregar_elemento_escala": "Agregar elemento",
-        "estado": "Estado",
-        "descripcion_columna": "Descripción",
-        "visualizar": "visualizar",
-        "sub_titulo_cualitativa": "Permite clasificar el desempeño del docente usando categorías como 'Insuficiente', 'Necesita Mejorar', 'Bueno', etc.",
-        "sub_titulo_cuantitativo": "Permite calificar el desempeño del docente con valores numéricos, como del 1 al 5.",
-        "alerta_cualitativa": "A continuación, deberá diligenciar el formulario utilizando la escala cualitativa, seleccionando una categoría que mejor describa el desempeño del docente, como 'Excelente', 'Bueno', 'Aceptable', etc.",
-        "alerta_cuantitativa": "A continuación, deberá diligenciar el formulario utilizando la escala cuantitativa, asignando una calificación numérica al desempeño del docente, basada en su experiencia.",
-        "titulo_cualitativa_seud": "Escala cualitativa del SEUD",
-        "titulo_cuantitativa_seud": "Escala cuantitativa del SEUD",
-        "acciones": "Acciones",
-        "tipo": "Evaluación",
-        "valor": "Valor",
-        "criterios": "Criterios"
+        "titulo_principal": "Definir Escalas",
+        "aniadir_nueva_escala": "Añadir nueva escala",
+        "tipo_escala": "Tipo de Escala",
+        "descripcion": "Descripción",
+        "tipo_input": "Tipo de Input",
+        "formulario_creacion": "Formulario de Creación",
+        "sin_escalas": "No hay escalas disponibles",
+        "guardar": "Guardar",
+        "cancelar": "Cancelar",
+        "eliminar": "Eliminar",
+        "buscar": "Buscar"
     },
     
     "heteroevaluacion": {
