feat: Ajustes de diseño y traduccion udistrital/sga_documentacion#514

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,7 +32,8 @@
         "cancelar": "Cancel",
         "estado": "Status",
         "ver_general": "View scale",
-        "regresar": "Go back"
+        "regresar": "Go back",
+        "PONDERACION":"Ponderación"
     },
 
     "asignacion_fechas": {
