--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -30,7 +30,8 @@
         "seleccionar": "Seleccionar",
         "error": "Error",
         "estado":"Estados",
-        "regresar": "Volver"
+        "regresar": "Volver",
+        "PONDERACION":"Ponderación"
     },
 
     "asignacion_fechas": {
