--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -148,7 +148,8 @@
         "error_fecha_fin": "Por favor, ingrese la fecha de fin.",
         "error_proyecto": "Por favor, seleccione un proyecto.",
         "error_docente": "Por favor, seleccione un docente.",
-        "error_descripcion": "Por favor, ingrese una descripción."
+        "error_descripcion": "Por favor, ingrese una descripción.",
+        "mensaje_confirmacion": "Usted va a proceder con la autoevalución del/la docente {nombre_docente} de la asignatura {nombre_asignatura}"
     },
 
     "autoevaluacion_i": {
@@ -168,7 +169,8 @@
         "error_fecha_fin": "Por favor, ingrese la fecha de fin.",
         "error_proyecto": "Por favor, seleccione un proyecto.",
         "espacio_academico": "Espacio Académico",
-        "error_descripcion": "Por favor, ingrese una descripción."
+        "error_descripcion": "Por favor, ingrese una descripción.",
+        "mensaje_confirmacion": "Usted va a proceder con la autoevaluación de su desempeño para la asignatura {nombre_asignatura}."
     },
 
     "coevaluacion_i": {
@@ -191,7 +193,8 @@
         "error_grupo": "Por favor, seleccione un grupo.",
         "descripcion_proceso": "Descripción del proceso",
         "error_descripcion": "Por favor, ingrese la descripción del proceso.",
-        "guardar": "Guardar"
+        "guardar": "Guardar",
+        "mensaje_confirmacion": "Usted va a proceder con la coevalución de: - Espacio académico: {nombre_espacio}. - Grupo de estudiantes {grupo}"
       },
 
     "autoevaluacion_ii": {
@@ -216,7 +219,8 @@
         "error_fecha_fin": "Por favor, ingrese la fecha de fin.",
         "error_proyecto": "Por favor, seleccione un proyecto.",
         "error_espacio_academico": "Por favor, seleccione un espacio académico.",
-        "error_descripcion": "Por favor, ingrese una descripción."
+        "error_descripcion": "Por favor, ingrese una descripción.",
+        "mensaje_confirmacion": "Usted va a proceder con la Autoevaluación para el proyecto curricular {nombre_proyecto}"
     },
 
     "coevaluacion_ii": {
