feat: Se agregan mensaje de confirmacion al consultar evaluacion

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -37,6 +37,7 @@
         "regresar": "Go back",
         "PONDERACION": "Ponderación",
         "cerrar": "Close",
+        "confirmacion": "Confirmation",
         "anterior": "Previus",
         "siguiente": "Next",
         "formulario_incompleto_titulo": "Incomplete form",
@@ -150,7 +151,7 @@
         "error_proyecto": "Please select a project.",
         "error_docente": "Please select a teacher.",
         "error_descripcion": "Please enter a description.",
-        "mensaje_confirmacion": "You are going to proceed with the self-evaluation of the teacher {nombre_docente} for the subject {nombre_asignatura}."
+        "mensaje_confirmacion": "You are going to proceed with the self-evaluation of the teacher {{nombre_docente}} for the subject {{nombre_asignatura}}."
     },
 
     "autoevaluacion_i": {
@@ -170,7 +171,7 @@
         "error_fecha_fin": "Please enter the end date.",
         "error_proyecto": "Please select a project.",
         "error_descripcion": "Please enter a description.",
-        "mensaje_confirmacion": "You are going to proceed with the self-evaluation of your performance for the subject {nombre_asignatura}."
+        "mensaje_confirmacion": "You are going to proceed with the self-evaluation of your performance for the subject {{nombre_asignatura}}."
     },
 
     "coevaluacion_i": {
@@ -194,7 +195,7 @@
         "descripcion_proceso": "Process description",
         "error_descripcion": "Please enter a process description.",
         "guardar": "Save",
-        "mensaje_confirmacion": "You are going to proceed with the co-evaluation of: - Academic space: {nombre_espacio}. - Student group: {grupo}."
+        "mensaje_confirmacion": "You are going to proceed with the co-evaluation of: - Academic space: {{nombre_espacio}}. - Student group: {{grupo}}."
     },
 
     "autoevaluacion_ii": {
@@ -220,7 +221,7 @@
         "error_proyecto": "Please select a project.",
         "error_espacio_academico": "Please select an academic space.",
         "error_descripcion": "Please enter a description.",
-        "mensaje_confirmacion": "You are going to proceed with the self-evaluation for the curricular project {nombre_proyecto}."
+        "mensaje_confirmacion": "You are going to proceed with the self-evaluation for the curricular project {{nombre_proyecto}}."
     },
 
     "coevaluacion_ii": {
